// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter-select can mount "empty" FilterSelect 1`] = `
<span tabindex="0" class="SharpFilterSelect SharpFilterSelect--empty"><!----> <span class="SharpFilterSelect__text">
        Web job<!----></span>
<!---->
</span>
`;

exports[`filter-select can mount "multiple empty" FilterSelect 1`] = `
<span tabindex="0" class="SharpFilterSelect SharpFilterSelect--empty SharpFilterSelect--multiple"><!----> <span class="SharpFilterSelect__text">
        Web job<!----></span>
<!---->
</span>
`;

exports[`filter-select can mount "multiple valuated" FilterSelect 1`] = `
<span tabindex="0" class="SharpFilterSelect SharpFilterSelect--multiple"><!----> <span class="SharpFilterSelect__text">
        Web job<span style="font-weight: normal;">&nbsp;&nbsp;</span></span>
<!---->
</span>
`;

exports[`filter-select can mount "valuated" FilterSelect 1`] = `
<span tabindex="0" class="SharpFilterSelect"><!----> <span class="SharpFilterSelect__text">
        Web job<span style="font-weight: normal;">&nbsp;&nbsp;</span></span>
<!---->
</span>
`;
